@@ -1,5 +1,5 @@
 /*
- * "$Id: config.h,v 1.5.2.5.2.2 2001/08/19 00:14:11 easysw Exp $"
+ * "$Id: config.h,v 1.5.2.5.2.3 2001/09/23 13:08:03 easysw Exp $"
  *
  * Configuration file for the Fast Light Tool Kit (FLTK) for Visual C++.
  *
@@ -23,7 +23,12 @@
  * Please report all bugs and problems to "fltk-bugs@fltk.org".
  */
 
+/*
+ * Where to find the documentation files...
+ */
+
 #define FLTK_DOCDIR	"C:/FLTK/DOC"
+
 
 /*
  * BORDER_WIDTH:
@@ -169,5 +174,5 @@
 #undef HAVE_PNG_GET_VALID
 
 /*
- * End of "$Id: config.h,v 1.5.2.5.2.2 2001/08/19 00:14:11 easysw Exp $".
+ * End of "$Id: config.h,v 1.5.2.5.2.3 2001/09/23 13:08:03 easysw Exp $".
  */
